--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 org.gradle.daemon=true
 org.gradle.configureondemand=true
 org.gradle.parallel=true
+android.useAndroidX=true
 
 GROUP_ID=com.linkedin.dextestparser
 VERSION_NAME=2.3.5-SNAPSHOT
