Change groupId and artifactId to match Jitpack

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ org.gradle.configureondemand=true
 org.gradle.parallel=true
 android.useAndroidX=true
 
-GROUP_ID=com.linkedin.dextestparser
+GROUP_ID=com.github.badoo
 VERSION_NAME=2.3.5-SNAPSHOT
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
