--- a/parser/build.gradle
+++ b/parser/build.gradle
@@ -10,8 +10,9 @@ plugins {
 mainClassName = 'com.linkedin.dex.parser.DexParser'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
 
     withSourcesJar()
 }
